--- a/crates/todo-yaml/Cargo.toml
+++ b/crates/todo-yaml/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 serde_yaml = "^0.8.12"
 structopt = "^0.3.14"
+iced = "^0.1.1"
 
 [dependencies.serde]
 version = "^1.0.111"
