--- a/crates/task-rs/Cargo.toml
+++ b/crates/task-rs/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.0.0"
 authors = ["khai96_ <hvksmr1996@gmail.com>"]
 edition = "2018"
 license = "MIT"
+repository = "https://github.com/task-rs/task-rs.git"
 
 [dependencies]
 serde_yaml = "^0.8.12"
