--- a/crates/task-rs/Cargo.toml
+++ b/crates/task-rs/Cargo.toml
@@ -17,6 +17,7 @@ path = "bin/task-rs.rs"
 
 [dependencies]
 smart-default = "^0.6.0"
+pipe-trait = "^0.2.0"
 ron = "^0.6.0"
 serde_yaml = "^0.8.12"
 structopt = "^0.3.14"
