--- a/crates/task-rs/Cargo.toml
+++ b/crates/task-rs/Cargo.toml
@@ -21,6 +21,7 @@ pipe-trait = "^0.2.0"
 ron = "^0.6.0"
 serde_yaml = "^0.8.12"
 structopt = "^0.3.14"
+dirs = "^2.0.2"
 iced = "^0.1.1"
 
 [dependencies.serde]
