--- a/crates/task-rs/Cargo.toml
+++ b/crates/task-rs/Cargo.toml
@@ -23,6 +23,7 @@ serde_yaml = "^0.8.12"
 structopt = "^0.3.14"
 dirs = "^2.0.2"
 iced = "^0.1.1"
+bimap = "^0.4.0"
 
 [dependencies.serde]
 version = "^1.0.111"
