--- a/preview/tasks/src/assets/data.yaml
+++ b/preview/tasks/src/assets/data.yaml
@@ -12,3 +12,15 @@ tags:
 tasks:
   - status: active
     summary: first task
+  - status: active
+    summary: task with a sub
+    sub:
+      - status: active
+        summary: first sub task
+  - status: active
+    summary: task with 2 subs
+    sub:
+      - status: completed
+        summary: completed sub task
+      - status: active
+        summary: active sub task
