Add some tags to preview

--- a/preview/tasks/src/assets/data.yaml
+++ b/preview/tasks/src/assets/data.yaml
@@ -12,11 +12,19 @@ tags:
 tasks:
   - status: active
     summary: first task
+    tags:
+      - abc
+      - def
+      - ghi
   - status: active
     summary: task with a sub
+    tags:
+      - abc
     sub:
       - status: active
         summary: first sub task
+        tags:
+          - def
   - status: active
     summary: task with 2 subs
     sub:
@@ -29,6 +37,8 @@ tasks:
     sub:
       - status: active
         summary: deep sub task levels 1
+        tags:
+          - abc
         sub:
           - status: completed
             summary: deep sub task levels 1a
@@ -36,6 +46,10 @@ tasks:
             summary: deep sub task levels 1b
       - status: completed
         summary: deep sub task levels 2
+        tags:
+          - def
         sub:
           - status: active
             summary: deep sub task levels 2a
+            tags:
+              - ghi
